# Freikino

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: dependabot.yml
.github/actions/setup-vcpkg/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
cmake/: compile_options.cmake  verify_binary.ps1
resources/: freikino.manifest  freikino.rc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  audio_info_overlay.cpp  audio_info_overlay.h  audio_tracks_overlay.cpp  audio_tracks_overlay.h  debug_overlay.cpp  debug_overlay.h  main.cpp  main_window.cpp  main_window.h  media_session.cpp  media_session.h  opening_overlay.cpp  opening_overlay.h  playback.cpp  playback.h  playlist.cpp  playlist.h  playlist_overlay.cpp  playlist_overlay.h  spectrum_visualizer.cpp  spectrum_visualizer.h  subtitle_overlay.cpp  subtitle_overlay.h  subtitle_setup_overlay.cpp  subtitle_setup_overlay.h  title_toast.cpp  title_toast.h  transport_overlay.cpp  transport_overlay.h  volume_osd.cpp  volume_osd.h
src/audio/: CMakeLists.txt
src/audio/include/freikino/audio/: audio_frame.h  audio_frame_source.h  wasapi_renderer.h
src/audio/src/: wasapi_renderer.cpp
src/common/: CMakeLists.txt
src/common/include/freikino/common/: com.h  error.h  log.h  strings.h
src/common/src/: error.cpp  log.cpp  strings.cpp
src/media/: CMakeLists.txt
src/media/include/freikino/media/: ffmpeg_source.h  frame_queue.h  probe.h  source.h  thumbnail_source.h
src/media/src/: ffmpeg_source.cpp  matroska_subs.cpp  matroska_subs.h  probe.cpp  thumbnail_source.cpp
src/platform/: CMakeLists.txt
src/platform/include/freikino/platform/: dpi.h
src/platform/src/: dpi.cpp
src/render/: CMakeLists.txt
src/render/include/freikino/render/: device.h  overlay_renderer.h  presentation_clock.h  presenter.h  swap_chain.h  video_frame.h  video_frame_source.h  video_pipeline.h  wall_clock.h
src/render/src/: device.cpp  overlay_renderer.cpp  presenter.cpp  swap_chain.cpp  video_pipeline.cpp  wall_clock.cpp
src/subtitle/: CMakeLists.txt
src/subtitle/include/freikino/subtitle/: subtitle_renderer.h  subtitle_source.h
src/subtitle/src/: subtitle_renderer.cpp  subtitle_source.cpp
src/ui/: CMakeLists.txt
src/ui/include/freikino/ui/: window.h
src/ui/src/: window.cpp
tests/: CMakeLists.txt  test_dpi.cpp  test_error.cpp  test_frame_queue.cpp  test_log.cpp  test_placeholder.cpp  test_strings.cpp
